--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,3 +1,34 @@
+[tool.poetry]
+name = "tvcalib"
+version = "0.0.2"
+description = "Module for getting camer transformations based on an image of a football pitch"
+authors = ["Henrich Hegedus <henrich@playerdata.com>"]
+readme = "README.md"
+license-file = "LICENSE"
+packages = [
+    { include = "tvcalib"},
+]
+
+[virtualenvs]
+in-project = true
+
+[tool.poetry.dependencies]
+python = ">=3.8,<=3.10"
+opencv-python = "=4.6.0.66"
+numpy = "*"
+torch = "1.11.0"
+torchvision = "0.12.0"
+pyyaml = "*"
+matplotlib = "*"
+pandas = "*"
+jupyter = "*"
+seaborn = "*"
+kornia = "0.6.3"
+soccernet = "0.1.34"
+pytorch-lightning = "1.5.10"
+tqdm = "4.64.0"
+ipykernel = ">=6.22.0"
+
 [tool.black]
 line-length = 100
 include = '\.pyi?$'
