--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "sn_segmentation"]
-	path = sn_segmentation
+[submodule "src/sn_segmentation"]
+	path = src/sn_segmentation
 	url = https://github.com/jtheiner/sn-calibration-segmentation
